samples/_failures_safe/1761316236_f4585f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2666dfdb.c: In function ‘main’:
./samples/SAFE/__tmp_2666dfdb.c:166:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  166 |     double compression_
      |     ^~~~~~
./samples/SAFE/__tmp_2666dfdb.c:166:5: error: expected declaration or statement at end of input
